<resources>
    <string name="app_name">Test Weather App</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="str_contact_us">Contact us</string>
    <string name="str_send_feedback">Feedback</string>
    <string name="str_help">Help</string>
    <string name="str_settings">Settings</string>
    <string name="str_widgets">Widgets</string>
    <string name="str_communicate">Communicate</string>
    <string name="str_search">Search</string>
    <string name="str_hint_search">Search location</string>
    <string name="real_feel">Real feel</string>
    <string name="real_feel_shade">Real feel shade</string>
    <string name="default_number">--</string>
    <string name="note">Notes:</string>
    <string name="degree">°</string>
    <string name="degreeCel">°C</string>
    <string name="degreeFah">°F</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="more_dtl">More details</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipitationProb">Precipitation Probability</string>
    <string name="rise_set">Rise-Set</string>
    <string name="mode">Switch mode</string>
    <string name="thunder_storm">Thunderstorm Probability</string>
    <string name="rain">Rain Probability</string>
    <string name="snow">Snow Probability</string>
    <string name="ice">Ice Probability</string>
    <string name="wind">Wind Speed</string>
    <string name="wind_gust">Wind Gust Speed</string>
    <string name="total_liquid">Total Liquid</string>
</resources>
