<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/str_settings" />

        <item
            android:id="@+id/widgets"
            android:icon="@drawable/ic_widgets"
            android:title="@string/str_widgets" />
    </group>


    <item android:title="@string/str_communicate">

        <menu>

            <item
                android:id="@+id/contact_us"
                android:title="@string/str_contact_us" />

            <item
                android:id="@+id/feedback"
                android:title="@string/str_send_feedback" />

            <item
                android:id="@+id/help"
                android:title="@string/str_help" />
        </menu>
    </item>

</menu>

