<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_normal"
    android:padding="@dimen/spacing_normal"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="@dimen/spacing_normal"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_normal">

        <ImageButton
            android:id="@+id/img_btn"
            android:layout_width="@dimen/ic_button"
            android:layout_height="@dimen/ic_button"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_sun" />

        <LinearLayout
            android:id="@+id/linear_sun_moon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_btn"
            android:layout_marginTop="@dimen/spacing_normal"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/hours_sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:fontFamily="@font/roboto"
                    android:text="@string/rise_set"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger" />


                <TextView
                    android:id="@+id/sun_rise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/default_number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger" />

                <TextView
                    android:id="@+id/sun_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/default_number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger" />

            </LinearLayout>


            </LinearLayout>




        <LinearLayout
            android:id="@+id/linear_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_sun_moon"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:id="@+id/linear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/precipitationTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:fontFamily="@font/roboto"
                    android:text="@string/precipitation"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger" />

                <TextView
                    android:id="@+id/precipitationDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/default_number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger" />

                <TextView
                    android:id="@+id/precipitationProbTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:fontFamily="@font/roboto"
                    android:text="@string/precipitationProb"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger" />

                <TextView
                    android:id="@+id/precipitationProbDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/default_number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_more_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_weather"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto"
            android:text="@string/more_dtl"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_more_details"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_down" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>


